--- a/concepts/pointnorth/index.html
+++ b/concepts/pointnorth/index.html
@@ -1,3 +1,3 @@
 <canvas width="100" height="100"></canvas><br>
-<span id="s">test2</span>
+<span id="s"></span><span>v3</span>
 <script src="script.js"></script>
